[package]
name = "lib-api"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
serde_json = "1.0"
actix-web = "4.2"
futures = "0.3"

[dev-dependencies.tokio]
version = "1.21"
features = ["rt", "macros"]

[dev-dependencies]
pretty_assertions = "1.3"
chrono = "0.4"
