[package]
name = "lib-api"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
serde_json = "1.0"
actix-web = "4.2"
lib-store = { path = "../lib-store" }

[dev-dependencies]
pretty_assertions = "0.6"
chrono = "0.4"
tokio = { version = "1.17", features = ["rt", "macros"] }
