[package]
name = "lib-store"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["fs", "rt", "macros"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
automerge = "0.1.0"
anyhow = "1.0"

[dev-dependencies]
pretty_assertions = "1.3"
