[package]
name = "oi"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"

[dependencies]
notify-rust = "4"
chrono = "0.4"
structopt = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.runic]
path = "../runic"

[dependencies.lib-api]
path = "../lib-api"

[dependencies.lib-config]
path = "../lib-config"
