[package]
name = "oi"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2021"

[dependencies]
notify-rust = "4.5"
chrono = "0.4"
structopt = "0.3"
uuid = { version = "1.2", features = ["serde", "v4"] }

[dependencies.tokio]
version = "1.21"
features = ["macros"]

[dependencies.runic]
version = "1.1.0"

[dependencies.lib-api]
path = "../lib-api"

[dependencies.lib-config]
path = "../lib-config"
