[package]
name = "oi"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"

[dependencies]
notify-rust = "4"
chrono = "0.4"
structopt = "0.3"
uuid = { version = "1.2", features = ["serde", "v4"] }
tokio = { version = "1.17", features = ["macros"] }
runic = "1.1.0"
lib-api = { path = "../lib-api" }
lib-config = { path = "../lib-config" }
lib-store = { path = "../lib-store" }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
