[package]
name = "oid"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"

[dependencies]
actix-web = "3.0"
tokio = { version = "0.2", features = ["rt-core"] }
notify-rust = "4"
structopt = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

lib-player = { path = "../lib-player" }
lib-store = { path = "../lib-store" }
lib-api = { path = "../lib-api" }
lib-config = { path = "../lib-config" }
