[package]
name = "oid"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2021"

[dependencies]
actix-web = "4.2"
tokio = { version = "1.21", features = ["rt"] }
notify-rust = "4.5"
structopt = "0.3"
uuid = { version = "1.2", features = ["serde", "v4"] }
anyhow = "1.0"

lib-player = { path = "../lib-player" }
lib-store = { path = "../lib-store" }
lib-api = { path = "../lib-api" }
lib-config = { path = "../lib-config" }
