[package]
name = "oid"
version = "0.1.0"
authors = ["Viktor Kuroljov <viktor@ku.family>"]
edition = "2018"

[dependencies]
actix-web = "4.2"
tokio = { version = "1.17", features = ["rt-multi-thread", "sync", "time"] }
notify-rust = "4"
structopt = "0.3"
uuid = { version = "1.2", features = ["serde", "v4"] }
anyhow = "1.0"
utoipa-swagger-ui = { version = "2.0", features = ["actix-web"] }
lib-player = { path = "../lib-player" }
lib-store = { path = "../lib-store" }
lib-config = { path = "../lib-config" }
serde_yaml = "~0.9"
env_logger = "~0.9"

[dependencies.utoipa]
version = "2.2"
features = ["json", "actix_extras", "debug", "uuid", "openapi_extensions"]

